--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TravelAI - Generador de Itinerarios con IA</title>
-    <meta name="description" content="Crea itinerarios de viaje personalizados basados en el clima y tus intereses. Planifica tu próxima aventura con inteligencia artificial." />
+    <title>SmartRoute</title>
+    <meta name="description" content="Crea itinerarios de viaje personalizados basados en el clima y tus intereses." />
     <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="c757ae16-a642-46ab-96fa-1c53bb34150c" />
